--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "frontend-assignment-saas-labs",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "21.7.3",
+    "npm": "10.5.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
